Route Selection: collapse common stops to emphasize differences between routes

--- a/simple/train/data/static/ui/RouteExplorer/css/main.css
+++ b/simple/train/data/static/ui/RouteExplorer/css/main.css
@@ -7492,6 +7492,10 @@ table.table .table-header-secondary th {
   color: #8d8d8d;
   font-size: 14px;
   font-weight: bold; }
+  .stop-list .stop.stop-collapsed {
+    padding: 6px 0;
+    background: none;
+    border: none; }
 
 .stop-diagram {
   position: relative; }
