--- a/simple/train/data/static/ui/RouteExplorer/scss/_stops.scss
+++ b/simple/train/data/static/ui/RouteExplorer/scss/_stops.scss
@@ -4,6 +4,12 @@
     border: 2px solid #d2d2d2; border-radius: 17px;
     background-color: #e8e9ed; color: #8d8d8d;
     font-size: 14px; font-weight: bold;
+
+    &.stop-collapsed {
+        padding: 6px 0; 
+        background: none;
+        border: none;
+    }
 }
 
 .stop-diagram {
